# langfuse-rs

./: .clippy.toml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  justfile  release-plz.toml  renovate.json5
.githooks/: pre-commit
.github/workflows/: ci.yml  release-plz.yml
docs/: AnnotationQueue.md  AnnotationQueueItem.md  AnnotationQueueObjectType.md  ApiKeyDeletionResponse.md  ApiKeyResponse.md  BooleanScore.md  BooleanScoreV1.md  CategoricalScore.md  CategoricalScoreV1.md  ChatMessageWithPlaceholders.md  ChatMessageWithPlaceholdersOneOf.md  ChatMessageWithPlaceholdersOneOf1.md  ChatPrompt.md  CreateAnnotationQueueAssignmentResponse.md  CreateAnnotationQueueItemRequest.md  CreateDatasetItemRequest.md  CreateEventBody.md  CreateGenerationEvent.md  CreatePromptRequestOneOf.md  CreatePromptRequestOneOf1.md  CreateScoreConfigRequest.md  CreateScoreValue.md  CreateSpanBody.md  CreateSpanEvent.md  CreateTextPromptRequest.md  DatasetItem.md  DatasetItemsApi.md  DatasetRunItem.md  DatasetRunItemsApi.md  DatasetStatus.md  DatasetsApi.md  DeleteAnnotationQueueItemResponse.md  DeleteDatasetItemResponse.md  DeleteMembershipRequest.md  DeleteTraceResponse.md  GITHUB_ACTIONS_SETUP.md  GetMediaResponse.md  GetMediaUploadUrlRequest.md  GetScoresResponseDataBoolean.md  GetScoresResponseDataNumeric.md  (+70 more)
examples/: basic_usage.rs  llm_chain.rs
langfuse-client-base/: Cargo.toml  README.md
langfuse-client-base/docs/: AnnotationQueueAssignmentRequest.md  AnnotationQueueStatus.md  AnnotationQueuesApi.md  ApiKeyList.md  ApiKeySummary.md  AuthenticationScheme.md  BaseEvent.md  BasePrompt.md  BaseScore.md  BaseScoreV1.md  BulkConfig.md  ChatMessage.md  Comment.md  CommentObjectType.md  CommentsApi.md  ConfigCategory.md  CreateAnnotationQueueRequest.md  CreateChatPromptRequest.md  CreateCommentRequest.md  CreateCommentResponse.md  CreateDatasetRequest.md  CreateDatasetRunItemRequest.md  CreateEventEvent.md  CreateGenerationBody.md  CreateModelRequest.md  CreateObservationEvent.md  CreatePromptRequest.md  CreateScoreRequest.md  CreateScoreResponse.md  Dataset.md  DatasetRun.md  DatasetRunWithItems.md  DeleteAnnotationQueueAssignmentResponse.md  DeleteDatasetRunResponse.md  FilterConfig.md  GetCommentsResponse.md  GetMediaUploadUrlResponse.md  GetScoresResponse.md  GetScoresResponseData.md  GetScoresResponseDataCategorical.md  (+71 more)
langfuse-client-base/src/: lib.rs
langfuse-ergonomic/: CHANGELOG.md  Cargo.toml
langfuse-ergonomic/examples/: basic_trace.rs  multiple_traces.rs  test_trace.rs  trace_with_metadata.rs
langfuse-ergonomic/src/: client.rs  error.rs  lib.rs  observations.rs  scores.rs  traces.rs
scripts/: generate-openapi-client.sh  setup-hooks.sh
src/: lib.rs
src/apis/: annotation_queues_api.rs  comments_api.rs  datasets_api.rs  health_api.rs  llm_connections_api.rs  media_api.rs  models_api.rs  prompt_version_api.rs  prompts_api.rs  sessions_api.rs  trace_api.rs
src/models/: annotation_queue.rs  annotation_queue_assignment_request.rs  annotation_queue_status.rs  api_key_list.rs  api_key_response.rs  base_event.rs  (+95 more)
(+107 files in other folders)
