[workspace]
resolver = "2"
members = [
    "langfuse-client-base",
    "langfuse-ergonomic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/timvw/langfuse-rs"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
bon = "3.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
url = "2.5"
base64 = "0.22"

# Development dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
pretty_assertions = "1.4"
